apps/vector/daemonset.yaml
---
apiVersion: "apps/v1"
kind: "DaemonSet"
metadata:
  name: "vector"
  labels:
    app.kubernetes.io/name: "vector"
    app.kubernetes.io/instance: "vector"
    app.kubernetes.io/component: "Agent"
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Vector needs to run as root in order not to heavily configure nodes"
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "vector"
      app.kubernetes.io/instance: "vector"
      app.kubernetes.io/component: "Agent"
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: "vector"
        app.kubernetes.io/name: "vector"
        app.kubernetes.io/instance: "vector"
        app.kubernetes.io/component: "Agent"
        vector.dev/exclude: "true"
      annotations:
        prometheus.io/port: "9598"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: "vector"
      dnsPolicy: "ClusterFirst"
      securityContext:
        runAsNonRoot: false
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "vector"
          image: "timberio/vector:0.59.0-distroless-libc"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--config-dir"
            - "/etc/vector/"
          ports:
            - name: "metrics"
              containerPort: 9598
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "384Mi"
              cpu: "25m"
            limits:
              cpu: "1"
              memory: "768Mi"
          volumeMounts:
            - name: "data"
              mountPath: "/vector-data-dir"
            - name: "vector-config"
              mountPath: "/etc/vector/"
              readOnly: true
            - mountPath: "/var/log/"
              name: "var-log"
              readOnly: true
            - mountPath: "/var/lib"
              name: "var-lib"
              readOnly: true
      terminationGracePeriodSeconds: 60
      volumes:
        - name: "vector-config"
          configMap:
            name: "vector-config"
        - name: data
          hostPath:
            path: "/var/lib/vector-k8s"
        - hostPath:
            path: "/var/log/"
          name: "var-log"
        - hostPath:
            path: "/var/lib/"
          name: "var-lib"
